Add margin and padding to styles

--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,12 @@
 
 h1 {
     color: #d1d5db;
+    padding: 10px;
+
 }
 
 ul {
     font-size: 20px;
-    line-height: 1.5;
+    line-height: 2;
+    margin: 10px;
 }   
